--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
    --black:#252a34;
    --blue:#08d9d6;
    --white:#eaeaea;
-   --title:35px;
+   --title:20px;
    --text:19px;
 }
 
@@ -83,7 +83,7 @@ body{
     z-index: 9999;
     box-shadow: 7px 7px 15px #000000; 
 }
-.menu .logo-box{margin-left: 20px;}
+.menu .logo-box{margin-left: 10px;}
 .menu .logo-box h1 a{
     text-decoration: none;
     font-size: var(--title);
@@ -869,27 +869,93 @@ hr {
     color: black;
 }
       
-/* styling search bar */
-.search input[type=text]{
-    width:300px;
-    height:25px;
-    border-radius:25px;
-    border: none;
-}
-      
-.search{
-    float:right;
-    margin:7px;
-}
-      
-.search button{
-    background-color: #0074D9;
-    color: #f2f2f2;
-    float: right;
-    padding: 5px 10px;
-    margin-right: 16px;
+/*  Barra de busqueda */
+.buscar {
+    position: relative;
+  }
+  
+  .buscar input {
+    width: 0;
+    height: 25px;
+    padding: 0 10px;
     font-size: 12px;
-    border: none;
+    color: #222;
+    outline: none;
+    border: 1px solid silver;
+    border-radius: 30px;
+    transition: all 0.6s ease;
+  }
+  
+  .btn {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    top: 0;
+    right: 0;
+    position: absolute;
+    background: #440088;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .buscar:hover input {
+    width: 240px;
+  }
+  
+  .buscar input:focus {
+    width: 240px;
+  }
+/*********************** Fin Barra ***********************/
+.det{
+    width: 50%;
+    margin:auto;
+    text-align: center;
+}
+.det h2{
+    font-size: 50px;
+    font-weight: normal;
+    color: white;
+    margin-bottom: 10px;
+}
+.det hr{
+    width: 60%;
+    height: 2px;
+    margin:auto;
+    background: var(--black);
+}
+.det-texto{
+    border: 2px solid var(--red);
+    padding:20px;
+    border-radius: 20px;
+    transition: 0.1s;
     cursor: pointer;
 }
-/*********************** Fin Barra ***********************/
+.det-texto h4{
+    font-size: 30px;
+    font-weight: 400;
+    color: var(--red);
+    text-align: center;
+    margin-bottom: 10px;
+    transition: 0.1s;
+}
+.det-texto p{
+    font-size: 20px;
+    text-align: center;
+    line-height: 40px;
+    color: var(--white);
+}
+.det-texto:hover{
+    border: 2px solid var(--blue);
+}
+.det-texto:hover h4{
+    color: var(--blue);
+}
+.titulo-fix h4{
+    font-size: 30px;
+    font-weight: 400;
+    color: var(--black);
+    text-align: center;
+}
