--- a/css/styles.css
+++ b/css/styles.css
@@ -315,7 +315,7 @@ body{
     position: relative;
     width: 100%;
     height: 100%; 
-    background: url(../img/img-2.jpg);
+    background: url(../img/f4.jpg);
     background-attachment:fixed;
     background-position: center;
     background-size: cover;
@@ -382,7 +382,7 @@ body{
 /** Testimonios **/
 .testimonios{
     width: 100%;
-    margin-top: 120px;
+    margin-top: 10px;
 }
 .testimonios .testimonios-title{
     width: 50%;
@@ -403,7 +403,7 @@ body{
 }
 .testimonios .box-testimonio{
     width: 90%;
-    margin: 80px auto;
+    margin: 20px auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -459,12 +459,51 @@ body{
     .testimonios .box-testimonio .card-testimonio .testimonio-text p{font-size: 17px; line-height: 35px;}
 }
 
-/** Footer **/
+/**       footer **/
 .footer{
     position: relative;
     width: 100%;
     height: 100%;
+
+}
+.bg-img-idx{
+    background: url(../img/f.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-vsn{
+    background: url(../img/lapiz.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-msn{
+    background: url(../img/fondomsn.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-cto{
+    background: url(../img/fondoctc.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-fts{
     background: url(../img/footer.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-svs{
+    background: url(../img/fondosvs.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+.bg-img-nsts{
+    background: url(../img/fondonsts.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -958,4 +997,20 @@ hr {
     font-weight: 400;
     color: var(--black);
     text-align: center;
+}
+
+.mivision-img{
+    display: flex;
+    justify-content: center;
+
+}
+.mivision-img img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
+}
+@media only screen and (max-width:890px){
+    .mivision-img img{width: 200px; height: 200px;}
 }
